[gd_scene load_steps=5 format=3 uid="uid://7vp5bh0hwkdj"]

[ext_resource type="Script" uid="uid://bcfp0xq2i4k8d" path="res://assets/scripts/towers/TowerBase.gd" id="1_lyect"]

[sub_resource type="BoxMesh" id="BoxMesh_m3v3g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_chvo0"]
size = Vector3(2.8, 8.6095, 2.8)

[sub_resource type="SphereShape3D" id="SphereShape3D_et1c7"]

[node name="Wall" type="StaticBody3D" groups=["tower"]]
script = ExtResource("1_lyect")
damage = 0.0
firing_speed = 0.0

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.31, 0, -1.31)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Pivot"]
transform = Transform3D(2.51, 0, 0, 0, 8.33, 0, 0, 0, 2.51, -1.36919, 4.18442, 1.21323)
mesh = SubResource("BoxMesh_m3v3g")

[node name="TowerBodyCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.19209e-07, 4.30675, 1.19209e-07)
shape = SubResource("BoxShape3D_chvo0")

[node name="TowerHead" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.3, 0)

[node name="IdleLookaroundTimer" type="Timer" parent="."]
autostart = true

[node name="FiringTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackArea" type="Area3D" parent="." groups=["enemy"]]

[node name="AttackShape" type="CollisionShape3D" parent="AttackArea"]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)
shape = SubResource("SphereShape3D_et1c7")
debug_color = Color(0.918557, 0, 0.222529, 1)

[node name="NavigationObstacle3D" type="NavigationObstacle3D" parent="."]
radius = 2.5
affect_navigation_mesh = true
carve_navigation_mesh = true

[connection signal="timeout" from="IdleLookaroundTimer" to="." method="_on_idle_lookaround_timer_timeout"]
[connection signal="timeout" from="FiringTimer" to="." method="_on_firing_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
